# BrightEyes-MCS-cylibs

./: .gitignore  MANIFEST.in  README.md  compile_cython.bat  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml
src/brighteyes_mcs_cylibs/: __init__.py
tests/: test_imports.py
